Github actions test vpn

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,8 +23,7 @@ jobs:
           VPN_PASSWORD: ${{secrets.VPN_PASSWORD}}
       - name: Step 2
         run: |
-          sudo su
-          cat <<EOF >/etc/vpnc.conf
+          sudo bash -c 'cat <<EOF > /etc/vpnc.conf
           IPSec gateway $VPN_GATEWAY
           IPSec ID $VPN_IPSEC_ID
           IPSec secret $VPN_IPSEC_SECRET
@@ -37,10 +36,10 @@ jobs:
           Domain cpqd.com.br
           Perfect Forward Secrecy server
           No Detach
-          EOF
+          EOF'
       - name: Step 3
         run: |
-          sudo vpnc /etc/vpnc.conf
+          sudo vpnc vpnc.conf
       - name: Step 4
         run: |
           ping 10.50.11.165
