--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Install VPNC
         run: |
-          sudo apt-get install vpnc network-manager-vpnc network-manager-vpnc-gnome
+          sudo apt-get install vpnc
         env:
           VPN_GATEWAY: ${{secrets.VPN_GATEWAY}}
           VPN_IPSEC_ID: ${{secrets.VPN_IPSEC_ID}}
@@ -33,9 +33,24 @@ jobs:
       - name: Connect to VPN
         run: |
           sudo vpnc vpnc
-      - name: Try to ping
+      - name: Install sshpass
+        run: |
+          sudo apt-get install sshpass
+      - name: Install sshpass
+        run: |
+          sudo apt-get install sshpass
+      - name: Connect ssh
         run: |
           ping -c 5 10.50.11.165
+          sshpass -p  ${{secrets.SSH_USER}} ssh ${{secrets.SSH_PASSWORD}}@10.50.11.165
+          cat <<EOF > vpnc.conf
+          IPSec gateway ${{secrets.VPN_GATEWAY}}
+          IPSec ID ${{secrets.VPN_IPSEC_ID}}
+          IPSec secret ${{secrets.VPN_IPSEC_SECRET}}
+          Xauth username ${{secrets.VPN_USERNAME}}
+          Xauth password ${{secrets.VPN_PASSWORD}}
+          EOF
+          exit
       - name: Disconnect to VPN
         run: |
           sudo vpnc-disconnect
