--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,15 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install VPNC
+      - name: Install VPNC sshpass
         run: |
-          sudo apt-get install vpnc
-        env:
-          VPN_GATEWAY: ${{secrets.VPN_GATEWAY}}
-          VPN_IPSEC_ID: ${{secrets.VPN_IPSEC_ID}}
-          VPN_IPSEC_SECRET: ${{secrets.VPN_IPSEC_SECRET}}
-          VPN_USERNAME: ${{secrets.VPN_USERNAME}}
-          VPN_PASSWORD: ${{secrets.VPN_PASSWORD}}
+          sudo apt-get install vpnc sshpass
       - name: Create VPN Configuration File
         run: |
           sudo bash -c 'cat <<EOF > /etc/vpnc/vpnc.conf
@@ -33,15 +27,10 @@ jobs:
       - name: Connect to VPN
         run: |
           sudo vpnc vpnc
-      - name: Install sshpass
-        run: |
-          sudo apt-get install sshpass
-      - name: Install sshpass
-        run: |
-          sudo apt-get install sshpass
       - name: Connect ssh
         run: |
           ping -c 5 10.50.11.165
+          ssh-keygen -R 10.50.11.165
           sshpass -p  ${{secrets.SSH_USER}} ssh -v -T ${{secrets.SSH_PASSWORD}}@10.50.11.165
           cat <<EOF > vpnc.conf
           IPSec gateway ${{secrets.VPN_GATEWAY}}
