--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,12 +39,14 @@ jobs:
       - name: Install Platiagro
         uses: appleboy/ssh-action@master
         with:
-          host: ${teste_env}
+          host: 10.50.11.163
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
           script: |
             ifconfig
+            echo ${teste_env}
+            echo $teste_env
       - name: Disconnect to VPN
         run: |
           sudo vpnc-disconnect
