--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
+          command_timeout: 50m
           script: |
             sudo virt-clone --original=platia-automation --name=teste --file=/var/lib/libvirt/images/teste.qcow2
             virsh start teste
