--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           sudo vpnc vpnc
       - name: Create Platiagro VM
+        id: create_vm
         uses: appleboy/ssh-action@master
         with:
           host: 10.50.11.163
@@ -35,17 +36,16 @@ jobs:
           script: |
             VM_NAME=$(printf 'github-%(%Y-%m-%d-%H:%M:%S)T\n' -1)
             echo ${VM_NAME}
-            sudo virt-clone --original=platia-automation --name=${VM_NAME} --file=/var/lib/libvirt/images/${VM_NAME}.qcow2
-            sleep 60
-            virsh start ${VM_NAME}
-            sleep 120
-            virsh destroy ${VM_NAME}
-            sleep 60
-            virsh start ${VM_NAME}
-            sleep 120
-            sudo virt-cat -d ${VM_NAME} /home/cpqd/ifconfig.info
-            VM_IP=$(sudo virt-cat -d ${VM_NAME} /home/cpqd/ifconfig.info | grep 'inet' | cut -d: -f2 | awk '{print $2}')
-            echo ${VM_IP}
+            echo ::set-output name=name::${VM_NAME}
+      - name: Start Platiagro VM
+        uses: appleboy/ssh-action@master
+        with:
+          host: 10.50.11.163
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          script: |
+          echo ${{ steps.create_vm.outputs.name }}
       - name: Disconnect to VPN
         run: |
           sudo vpnc-disconnect
