--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           sudo vpnc vpnc
       - name: Create Platiagro VM
+        id: vars
         uses: appleboy/ssh-action@master
         with:
           host: 10.50.11.163
@@ -35,7 +36,7 @@ jobs:
           script: |
             VM_NAME=$(printf 'github-%(%Y-%m-%d-%H:%M:%S)T\n' -1)
             echo ${VM_NAME}
-            echo ::set-env name=VM_NAME::${VM_NAME}
+            echo ::set-output name=VM_NAME::${VM_NAME}
       - name: Start Platiagro VM
         uses: appleboy/ssh-action@master
         with:
@@ -44,7 +45,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
           script: |
-            echo ${VM_NAME}
+            echo ${{ steps.vars.outputs.VM_NAME }}
       - name: Disconnect to VPN
         run: |
           sudo vpnc-disconnect
