--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,13 @@ jobs:
       - name: Connect to VPN
         run: |
           sudo vpnc vpnc
-      - name: Create Platiagro VM
+      - name: Set tag var
         id: vars
+        run: |
+          VM_NAME=$(printf 'github-%(%Y-%m-%d-%H:%M:%S)T\n' -1)
+          echo ${VM_NAME}
+          echo ::set-output name=VM_NAME::${VM_NAME}
+      - name: Create Platiagro VM
         uses: appleboy/ssh-action@master
         with:
           host: 10.50.11.163
@@ -34,9 +39,7 @@ jobs:
           port: 22
           command_timeout: 50m
           script: |
-            VM_NAME=$(printf 'github-%(%Y-%m-%d-%H:%M:%S)T\n' -1)
-            echo ${VM_NAME}
-            echo ::set-output name=VM_NAME::${VM_NAME}
+            echo ${{ steps.vars.outputs.VM_NAME }}
       - name: Start Platiagro VM
         uses: appleboy/ssh-action@master
         with:
