--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,10 @@ jobs:
       - name: Connect to VPN
         run: |
           sudo vpnc vpnc
-      - name: Set tag var
+      - name: Create VM Name
         id: vars
         run: |
           VM_NAME=$(printf 'github-%(%Y-%m-%d-%H:%M:%S)T\n' -1)
-          echo ${VM_NAME}
           echo ::set-output name=VM_NAME::${VM_NAME}
       - name: Create Platiagro VM
         uses: appleboy/ssh-action@master
@@ -39,7 +38,9 @@ jobs:
           port: 22
           command_timeout: 50m
           script: |
-            echo ${{ steps.vars.outputs.VM_NAME }}
+            VM_NAME=${{ steps.vars.outputs.VM_NAME }}
+            echo ${VM_NAME}
+            sudo virt-clone --original=platia-automation --name=${VM_NAME} --file=/var/lib/libvirt/images/${VM_NAME}.qcow2
       - name: Start Platiagro VM
         uses: appleboy/ssh-action@master
         with:
@@ -48,7 +49,17 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
           script: |
-            echo ${{ steps.vars.outputs.VM_NAME }}
+            VM_NAME=${{ steps.vars.outputs.VM_NAME }}
+            echo ${VM_NAME}
+            virsh start ${VM_NAME}
+            sleep 120
+            virsh destroy ${VM_NAME}
+            sleep 60
+            virsh start ${VM_NAME}
+            sleep 120
+            sudo virt-cat -d ${VM_NAME} /home/cpqd/ifconfig.info
+            VM_IP=$(sudo virt-cat -d ${VM_NAME} /home/cpqd/ifconfig.info | grep 'inet' | cut -d: -f2 | awk '{print $2}')
+            echo ${VM_IP}
       - name: Disconnect to VPN
         run: |
           sudo vpnc-disconnect
