--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
-          command_timeout: 40m
+          timeout: 3m
+          command_timeout: 30m
           script: |
             VM_NAME=${{ steps.vars.outputs.VM_NAME }}
             sudo virt-clone --original=platia-automation --name=${VM_NAME} --file=/var/lib/libvirt/images/${VM_NAME}.qcow2
@@ -47,6 +48,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: 22
+          timeout: 3m
           script: |
             VM_NAME=${{ steps.vars.outputs.VM_NAME }}
             virsh start ${VM_NAME}
