--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Platiagro deploy
 
 on:
-  push:
-    branches: [feature/deploy-on-cpqd]
+  issues:
+    types: [opened]
 
 jobs:
   deploy:
@@ -55,6 +55,14 @@ jobs:
             sleep 120
             VM_IP=$(sudo virt-cat -d ${VM_NAME} /home/cpqd/ifconfig.info | grep 'inet' | cut -d: -f2 | awk '{print $2}')
             echo ${VM_IP}
+            curl --request PATCH  \
+            --url https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }} \
+            --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+            --header 'content-type: application/json' \
+            --data '{
+              "state": "closed",
+              "body": "_http://'"$VM_IP"':31380_"
+              }'
       - name: Disconnect to VPN
         run: |
           sudo vpnc-disconnect
