--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_web_ui
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
@@ -60,7 +60,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_projects
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
@@ -91,7 +91,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_pipelines
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
@@ -122,7 +122,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_datasets
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
@@ -153,7 +153,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_sdk
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
@@ -184,7 +184,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_tasks
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
@@ -215,7 +215,7 @@ jobs:
           echo ::set-output name=sha::$(git rev-parse HEAD)
           echo ::set-output name=tag::${GITHUB_REF##*/}
       - name: Create Release
-        id: create_release
+        id: create_release_jupyterlab_extension
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
